minor fixes wrt formatting and obvious fixes